<resources>
    <string name="app_name">blubrd</string>
    <string name="str_images_logo">Images logo</string>
    <string name="str_company_profile">Company Profile</string>
    <string name="str_contact">Contact</string>
    <string name="str_location">Location</string>
    <string name="str_project">Project</string>
    <string name="str_videos">Demo</string>
    <string name="str_catalogue">Catalogue</string>
    <string name="str_more_options">More Options</string>
    <string name="str_about">About</string>

    <string name="str_lbl_yes">Yes</string>
    <string name="str_lbl_no">No</string>
    <string name="str_lbl_exit_from_app">Do you want to close the app?</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_home">Home</string>
    <string name="str_notification">Notification</string>
    <string name="str_updates">Updates</string>
    <string name="str_feedback">feedback</string>
    <string name="str_help">Help</string>
    <string name="str_share_app">Share App</string>
    <string name="str_company_slogun">THINK HARDWARE. THINK BLUBRD.</string>

    <string name="str_give_feedback">Your Feedback</string>
    <string name="lbl_username">We want to know what you thought of your experience at \n our App Read It so we\'d love to hear your feedback.</string>
    <string name="lbl_email_id">Email-Id</string>
    <string name="lbl_mobile_no">Mobile No.</string>
    <string name="lbl_submit">Send Feedback</string>
    <string name="str_rate_us">Rate Us</string>
    <string name="str_error_valid_mobile">Invalid Mobile No</string>
    <string name="str_play">play</string>
    <string name="str_name">Name</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="str_special_offers">Special Offers</string>
    <string name="str_exclusive_discounts_just_fro_you">Exclusive discounts just fro you</string>
    <string name="str_need_help">Need Help?</string>
    <string name="str_contact_customer_care">Contact customer care</string>
    <string name="str_new_innovation_at_your_door">New innovation at your door.</string>
    <string name="str_new_products">New Products</string>

    <string name="str_contacts">Contacts</string>
    <string name="str_contact_blubrd">Contact Blubrd</string>
    <string name="str_blubrd_overseas"><u>Blubrd Overseas</u></string>
    <string name="str_address">Mumbai-Head Office \nPlot No: 512, D-1,Neeldhara Society, \nCharkop Market,Behind Apna Bazaar,\nKandiwali (West).Pin Cod: 400067</string>
    <string name="no">No</string>
    <string name="str_products">Products</string>

    <string name="title_fingerprint">One-touch Sign In</string>

    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
</resources>
