<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="2dp"
        android:background="@drawable/rectangle_border">

        <TextView
            android:id="@+id/tvSeeMorePdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="See More"
            android:textColor="@color/dark_pink_two"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvRecentPdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/tvSeeMorePdf"
            android:layout_toLeftOf="@id/tvSeeMorePdf"
            android:ellipsize="end"
            android:lines="1"
            android:text="Best Selling Products"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vpRecentItem"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@id/tvRecentPdf"
            android:background="@color/white" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cvOffer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_border">

            <ImageView
                android:id="@+id/ivOffer"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/str_images_logo"
                android:padding="10dp"
                android:src="@drawable/ic_discount" />

            <TextView
                android:id="@+id/tvOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toStartOf="@id/ivImg"
                android:layout_toLeftOf="@id/ivImg"
                android:layout_toEndOf="@id/ivOffer"
                android:layout_toRightOf="@id/ivOffer"
                android:text="@string/str_special_offers"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvOffer"
                android:layout_toEndOf="@id/ivOffer"
                android:layout_toRightOf="@id/ivOffer"
                android:text="@string/str_exclusive_discounts_just_fro_you"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/ivImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/str_images_logo"
                android:padding="10dp"
                android:src="@drawable/ic_right_black_24dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_border">

            <ImageView
                android:id="@+id/ivProducts"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/str_images_logo"
                android:padding="10dp"
                android:src="@drawable/ic_new" />

            <TextView
                android:id="@+id/tvProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toStartOf="@id/ivImg2"
                android:layout_toLeftOf="@id/ivImg2"
                android:layout_toEndOf="@id/ivProducts"
                android:layout_toRightOf="@id/ivProducts"
                android:text="@string/str_new_products"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvProducts"
                android:layout_toEndOf="@id/ivProducts"
                android:layout_toRightOf="@id/ivProducts"
                android:text="@string/str_new_innovation_at_your_door"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/ivImg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/str_images_logo"
                android:padding="10dp"
                android:src="@drawable/ic_right_black_24dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvHelp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_border">

            <ImageView
                android:id="@+id/ivHelp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/str_images_logo"
                android:padding="10dp"
                android:src="@drawable/ic_help2" />

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toStartOf="@id/ivImg1"
                android:layout_toLeftOf="@id/ivImg1"
                android:layout_toEndOf="@id/ivHelp"
                android:layout_toRightOf="@id/ivHelp"
                android:text="@string/str_need_help"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHelp"
                android:layout_toEndOf="@id/ivHelp"
                android:layout_toRightOf="@id/ivHelp"
                android:text="@string/str_contact_customer_care"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/ivImg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/str_images_logo"
                android:padding="10dp"
                android:src="@drawable/ic_right_black_24dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>